refactor: unify API handler function names to 'Handler' and clean up Vercel configuration

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,13 @@
 {
     "functions": {
         "api/chat.go": {
-            "runtime": "go1.x",
-            "handler": "ChatHandler"
+            "runtime": "go1.x"
         },
         "api/quote.go": {
-            "runtime": "go1.x",
-            "handler": "QuoteHandler"
+            "runtime": "go1.x"
         },
         "api/hadith.go": {
-            "runtime": "go1.x",
-            "handler": "HadithHandler"
+            "runtime": "go1.x"
         }
     },
     "routes": [
